Bug 1902068 - Fix HCM styling of input type="range". r=accessibility-frontend-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D214417